--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.10",
     "nodemon": "^2.0.13",
     "react-bootstrap": "^1.6.4"
   }
