bkend=> added dependency >bcryptjs, express-async-handler, jsonwebtoken using npm install

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "akaraya",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "nodemon": "^2.0.13",
     "react-bootstrap": "^1.6.4"
